# student_admission_management

./: CMakeLists.txt  README.md  resources.qrc
.github/workflows/: cmake-multi-platform.yml
config/: config.json
data/: initializeDatabase.sql
include/: controller.h  mainWindow.h  userManageWindow.h  utils.h
include/dialogs/: aboutDialog.h  addStudentDialog.h  addUserDialog.h  loginDialog.h  modifyPasswordDialog.h  modifyStudentDialog.h  modifyUserDialog.h  settingDialog.h
include/models/: classname.h  department.h  student.h  user.h
src/: CMakeLists.txt  controller.cpp  main.cpp  mainWindow.cpp  userManageWindow.cpp  utils.cpp
src/dialogs/: aboutDialog.cpp  addStudentDialog.cpp  addUserDialog.cpp  loginDialog.cpp  modifyPasswordDialog.cpp  modifyStudentDialog.cpp  modifyUserDialog.cpp  settingDialog.cpp
src/models/: classname.cpp  department.cpp  student.cpp  user.cpp
test/: CMakeLists.txt  studentTest.cpp  userTest.cpp
